--- a/conf/dset/4-16.yaml
+++ b/conf/dset/4-16.yaml
@@ -1,5 +1,5 @@
 # @package dset
 name: 4-16
-train: egs/vctk/4-16/tr
+train: /mnt/cephfs/hjh/train_record/super_resolution/aero/dataset/vctk/json_4-16/tr
 valid:
-test: egs/vctk/4-16/val
+test: /mnt/cephfs/hjh/train_record/super_resolution/aero/dataset/vctk/json_4-16/val
